--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -80,337 +80,336 @@ As I work through the list I'll link the reviews below. You can also find the re
 1. The Scoop (Telarium) - 1986
 1. Tass Times in Tonetown (Interplay Productions, Brainwave Creations) - 1986
 1. Uninvited (ICOM Simulations) - 1986
-1. Space Quest: The Sarien Encounter (Sierra On-Line) - 1986
-1. King's Quest III: To Heir Is Human (Sierra On-Line) - 1986
-1. Suishō no Dragon (Square) - 1986
-1. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
-1. Mortville Manor (Lankhor) - 1987
-1. Police Quest: In Pursuit of the Death Angel (Sierra On-Line) - 1987
-1. Leisure Suit Larry in the Land of the Lounge Lizards (Sierra On-Line) - 1987
-1. Shadowgate (ICOM Simulations) - 1987
-1. The Faery Tale Adventure (MicroIllusions) - 1987
-1. Méwilo (Coktel Vision) - 1987
-1. Maniac Mansion (Lucasfilm Games) - 1987
-1. Space Quest II: Vohaul's Revenge (Sierra On-Line) - 1987
-1. Déjà Vu II: Lost in Las Vegas (ICOM Simulations) - 1988
-1. Gold Rush! (Sierra On-Line) - 1988
-1. Manhunter: New York (Evryware) - 1988
-1. Neuromancer (Interplay Productions) - 1988
-1. King's Quest IV: The Perils of Rosella (Sierra On-Line) - 1988
-1. Leisure Suit Larry Goes Looking for Love (in Several Wrong Places) (Sierra On-Line) - 1988
-1. Zak McKracken and the Alien Mindbenders (Lucasfilm Games) - 1988
-1. Police Quest II: The Vengeance (Sierra On-Line) - 1988
-1. Snatcher (Konami) - 1988
-1. B.A.T. (Computer's Dream) - 1989
-1. Emmanuelle (Coktel Vision) - 1989
-1. Legend of Djel (Coktel Vision) - 1989
-1. Future Wars (Delphine Software International) - 1989
-1. KULT: The Temple of Flying Saucers (Exxos, ERE informatique) - 1989
-1. Manhunter 2: San Francisco (Evryware) - 1989
-1. Mean Streets (Access Software) - 1989
-1. Transylvania III: Vanquish the Night (Polarware) - 1989
-1. Space Quest III: The Pirates of Pestulon (Sierra On-Line) - 1989
-1. Indiana Jones and the Last Crusade (Lucasfilm Games) - 1989
-1. Quest for Glory: So You Want to Be a Hero (Sierra On-Line) - 1989
-1. The Colonel's Bequest (Sierra On-Line) - 1989
-1. Codename: ICEMAN (Sierra On-Line) - 1989
-1. Leisure Suit Larry III: Passionate Patti in Pursuit of the Pulsating Pectorals (Sierra On-Line) - 1989
-1. Altered Destiny (Accolade) - 1990
-1. Countdown (Access Software) - 1990
-1. Earthrise: A Guild Investigation (Matt Gruson) - 1990
-1. Geisha (Coktel Vision) - 1990
-1. Hugo's House of Horrors (Gray Design Associates) - 1990
-1. Les Manley in: Search for the King (Accolade) - 1990
-1. Maupiti Island (Lankhor) - 1990
-1. Operation Stealth (Delphine Software International) - 1990
-1. Quest for Glory II: Trial by Fire (Sierra On-Line) - 1990
-1. Rise of the Dragon (Dynamix) - 1990
-1. Conquests of Camelot: The Search for the Grail (Sierra On-Line) - 1990
-1. Loom (Lucasfilm Games) - 1990
-1. Spellcasting 101: Sorcerers Get All The Girls (Legend Entertainment) - 1990
-1. The Secret of Monkey Island (Lucasfilm Games) - 1990
-1. King's Quest V: Absence Makes the Heart Go Yonder! (Sierra On-Line) - 1990
-1. The Adventures of Willy Beamish (Dynamix) - 1991
-1. Conquests of the Longbow: The Legend of Robin Hood (Sierra On-Line) - 1991
-1. Cruise for a Corpse (Delphine Software International) - 1991
-1. Fascination (Coktel Vision) - 1991
-1. EcoQuest: The Search for Cetus (Sierra On-Line) - 1991
-1. Elvira II: The Jaws of Cerberus (Horrorsoft) - 1991
-1. Gobliiins (Coktel Vision) - 1991
-1. Heart of China (Dynamix) - 1991
-1. Hugo II, Whodunit? (Gray Design Associates) - 1991
-1. Les Manley in: Lost in L.A. (Accolade) - 1991
-1. Martian Memorandum (Access Software) - 1991
-1. Police Quest III: The Kindred (Sierra On-Line) - 1991
-1. Sherlock Holmes: Consulting Detective (ICOM Simulations) - 1991
-1. Spellcasting 201: The Sorcerer's Appliance (Legend Entertainment) - 1991
-1. Timequest (Legend Entertainment) - 1991
-1. Space Quest IV: Roger Wilco and the Time Rippers (Sierra On-Line) - 1991
-1. Metal Slader Glory (HAL Laboratory) - 1991
-1. Leisure Suit Larry 5: Passionate Patti Does a Little Undercover Work (Sierra On-Line) - 1991
-1. Monkey Island 2: LeChuck's Revenge (LucasArts) - 1991
-1. Amazon: Guardians of Eden (Access Software) - 1992
-1. B.A.T. II – The Koshan Conspiracy (Computer's Dream) - 1992
-1. Bargon Attack[1] (Coktel Vision) - 1992
-1. The Dagger of Amon Ra (Sierra On-Line) - 1992
-1. Dark Seed (Cyberdreams) - 1992
-1. Daughter of Serpents (The Scroll) (Eldritch Games) - 1992
-1. Dune (Cryo Interactive) - 1992
-1. Eternam (Infogrames) - 1992
-1. Gobliins 2: The Prince Buffoon (Coktel Vision) - 1992
-1. Hook (Ocean) - 1992
-1. Hugo III, Jungle of Doom! (Gray Design Associates) - 1992
-1. Inca (Coktel Vision) - 1992
-1. Inspector Gadget: Mission 1 - Global Terror! (Azeroth, Inc.) - 1992
-1. KGB (Cryo Interactive) - 1992
-1. Leather Goddesses of Phobos 2: Gas Pump Girls Meet the Pulsating Inconvenience from Planet X! (Infocom) - 1992
-1. The Legacy: Realm of Terror (Magnetic Scrolls) - 1992
-1. Linus Spacehead's Cosmic Crusade/Cosmic Spacehead (Codemasters (NES version), Supersonic Software) - 1992
-1. The Lost Files of Sherlock Holmes: The Case of the Serrated Scalpel (Mythos Software, Inc.) - 1992
-1. The Palace of Deceit: The Dragon's Plight (Game Syndicate Productions (Cliff Bleszinski)) - 1992
-1. Plan 9 from Outer Space (Gremlin Ireland) - 1992
-1. Putt-Putt Joins the Parade (Humongous Entertainment) - 1992
-1. Sherlock Holmes: Consulting Detective Vol. II (ICOM Simulations) - 1992
-1. Ringworld: Revenge of the Patriarch (Tsunami Games) - 1992
-1. Spellcasting 301: Spring Break (Legend Entertainment) - 1992
-1. Star Trek: 25th Anniversary (Interplay) - 1992
-1. Nightshade (1992 video game) (Beam Software) - 1992
-1. Frederik Pohl's Gateway (Legend Entertainment) - 1992
-1. Indiana Jones and the Fate of Atlantis (LucasArts) - 1992
-1. Lure of the Temptress (Revolution Software) - 1992
-1. Quest for Glory III: Wages of War (Sierra On-Line) - 1992
-1. The Legend of Kyrandia: Fables and Fiends (Westwood Studios) - 1992
-1. King's Quest VI: Heir Today, Gone Tomorrow (Sierra On-Line) - 1992
-1. Curse of Enchantia (Core Design) - 1992
-1. Rex Nebular and the Cosmic Gender Bender (MicroProse) - 1992
-1. The Adventures of Melvin Freebush (Sherwood Forest Games) - 1993
-1. Blue Force (Tsunami Games) - 1993
-1. Dare to Dream (Epic MegaGames) - 1993
-1. Dracula Unleashed (ICOM Simulations) - 1993
-1. EcoQuest 2: Lost Secret of the Rainforest (Sierra On-Line) - 1993
-1. Eric the Unready (Legend Entertainment) - 1993
-1. Fatty Bear's Birthday Surprise (Humongous Entertainment) - 1993
-1. Freddy Pharkas: Frontier Pharmacist (Sierra On-Line) - 1993
-1. Gobliins Quest 3 (Coktel Vision) - 1993
-1. Inca II: Nations of Immortality (Coktel Vision) - 1993
-1. Innocent Until Caught (Divide By Zero) - 1993
-1. The Legend of Kyrandia: Hand of Fate (Westwood Studios) - 1993
-1. Lost in Time (Coktel Vision) - 1993
-1. Pepper's Adventures in Time (Sierra On-Line) - 1993
-1. Putt-Putt Goes to the Moon (Humongous Entertainment) - 1993
-1. Return of the Phantom (MicroProse) - 1993
-1. Sherlock Holmes: Consulting Detective Vol. III (ICOM Simulations) - 1993
-1. The Journeyman Project (Presto Studios) - 1993
-1. Space Quest V: Roger Wilco – The Next Mutation (Dynamix) - 1993
-1. Tajemnica Statuetki (Metropolis Software House) - 1993
-1. Veil of Darkness (Event Horizon Software) - 1993
-1. Shadow of the Comet (Infogrames) - 1993
-1. The 7th Guest (Trilobyte) - 1993
-1. Leisure Suit Larry 6: Shape Up or Slip Out! (Sierra On-Line) - 1993
-1. Maniac Mansion: Day of the Tentacle (LucasArts) - 1993
-1. Return to Zork (Infocom) - 1993
-1. Myst (Cyan) - 1993
-1. Simon the Sorcerer (Adventure Soft) - 1993
-1. Companions of Xanth (Legend Entertainment) - 1993
-1. Police Quest: Open Season (Sierra On-Line) - 1993
-1. Sam & Max Hit the Road (LucasArts) - 1993
-1. Star Trek: Judgment Rites (Interplay) - 1993
-1. Gateway II: Homeworld (Legend Entertainment) - 1993
-1. Jack in the Dark (Infogrames) - 1993
-1. Quest for Glory: Shadows of Darkness (Sierra On-Line) - 1993
-1. Gabriel Knight: Sins of the Fathers (Sierra On-Line) - 1993
-1. Jurassic Park (Sega of America) - 1993
-1. Alice: An Interactive Museum (Toshiba-EMI) - 1994
-1. Are You Afraid of the Dark: The Tale of Orpheo's Curse (Viacom New Media) - 1994
-1. The Bizarre Adventures of Woodruff and the Schnibble (Coktel Vision) - 1994
-1. BloodNet (MicroProse) - 1994
-1. Commander Blood (Cryo Interactive) - 1994
-1. Return to Ringworld[2] (Tsunami Games) - 1994
-1. Dreamweb (Creative Reality) - 1994
-1. Gadget: Invention, Travel, & Adventure (Synergy, Inc.) - 1994
-1. Hell: A Cyberpunk Thriller (Take-Two Interactive Software) - 1994
-1. Igor: Objective Uikokahonia (Pendulo Studios) - 1994
-1. Inherit the Earth: Quest for the Orb (The Dreamers Guild) - 1994
-1. The Journeyman Project Turbo (Presto Studios) - 1994
-1. The Legend of Kyrandia: Malcolm's Revenge (Westwood Studios) - 1994
-1. Noctropolis (Flashpoint Productions) - 1994
-1. Plague of the Moon (Rebelsoft) - 1994
-1. Superhero League of Hoboken (Legend Entertainment) - 1994
-1. Under a Killing Moon (Access Software) - 1994
-1. Universe (Core Design) - 1994
-1. Dragonsphere (MicroProse) - 1994
-1. Beneath a Steel Sky (Revolution Software) - 1994
-1. Policenauts (Konami) - 1994
-1. Death Gate (Legend Entertainment) - 1994
-1. King's Quest VII: The Princeless Bride (Sierra On-Line) - 1994
-1. Dragon Lore: The Legend Begins (Cryo Interactive) - 1994
-1. The Beast Within: A Gabriel Knight Mystery (Sierra On-Line) - 1995
-1. The Big Red Adventure (Dynabyte) - 1995
-1. Chewy: Esc from F5[3] (Blue Byte) - 1995
-1. Chop Suey (game) (Theresa Duncan) - 1995
-1. Cosmology of Kyoto (Softedge) - 1995
-1. The Daedalus Encounter (Mechadeus) - 1995
-1. The Dark Eye (Inscape) - 1995
-1. "Discworld (Teeny Weeny Games
-1. Perfect 10 Productions) - 1995"
-1. Dust: A Tale of the Wired West (Cyberflix) - 1995
-1. EVE Burst Error (C's Ware) - 1995
-1. Flight of the Amazon Queen (Interactive Binary Illusions) - 1995
-1. Frankenstein: Through the Eyes of the Monster (Amazing Media) - 1995
-1. Guilty (Divide By Zero) - 1995
-1. Heaven's Dawn[4] (Art 9 Entertainment Inc.) - 1995
-1. In the 1st Degree (Adair & Armstrong) - 1995
-1. Jewels of the Oracle (Dreamcatcher Interactive) - 1995
-1. The Journeyman Project 2: Buried in Time (Presto Studios) - 1995
-1. Karma Curse of the 12 Caves (Dreamcatcher Interactive) - 1995
-1. Kingdom: The Far Reaches (Virtual Image Productions) - 1995
-1. The Orion Conspiracy (Divide By Zero) - 1995
-1. Panic in the Park (Imagination Pilots) - 1995
-1. Prisoner of Ice (Infogrames) - 1995
-1. Qin: Tomb of the Middle Kingdom (Learning Technologies Interactive) - 1995
-1. SilverLoad (Millennium Interactive) - 1995
-1. Skyborg: Into the Vortex (SkyBox International) - 1995
-1. Teen Agent (Metropolis Software House) - 1995
-1. Touché: The Adventures of the Fifth Musketeer (Clipper Software) - 1995
-1. Wolfsbane[5] (Midnight Games) - 1995
-1. Lost Eden (Cryo Interactive) - 1995
-1. Nocturnal Illusion (Apricot) - 1995
-1. Full Throttle (LucasArts) - 1995
-1. Aliens: A Comic Book Adventure (Cryo Interactive) - 1995
-1. Star Trek: The Next Generation – A Final Unity (Spectrum HoloByte) - 1995
-1. Space Quest 6: The Spinal Frontier (Sierra On-Line) - 1995
-1. Roberta Williams' Phantasmagoria (Sierra On-Line) - 1995
-1. Beavis and Butt-Head in Virtual Stupidity (Viacom New Media) - 1995
-1. Scooby-Doo Mystery (The Illusions Gaming Company) - 1995
-1. Clock Tower (Human Entertainment) - 1995
-1. Ripley's Believe It or Not!: The Riddle of Master Lu (Sanctuary Woods) - 1995
-1. I Have No Mouth, and I Must Scream (The Dreamers Guild) - 1995
-1. Torin's Passage (Sierra On-Line) - 1995
-1. Mission Critical (Legend Entertainment) - 1995
-1. Shivers (Sierra On-Line) - 1995
-1. Simon the Sorcerer II: The Lion, the Wizard and the Wardrobe (Adventure Soft) - 1995
-1. Total Distortion (Pop Rocket) - 1995
-1. Dark Seed II (Destiny Media Technologies) - 1995
-1. The Dig (LucasArts) - 1995
-1. The 11th Hour (Trilobyte) - 1995
-1. Shannara (Legend Entertainment) - 1995
-1. Chronomaster (DreamForge Intertainment) - 1995
-1. Robot City (Brooklyn Multimedia) - 1995
-1. Alien Incident (Housemarque) - 1996
-1. Amber: Journeys Beyond (Hue Forest Entertainment) - 1996
-1. Blue Ice (Art of Mind Productions) - 1996
-1. Creature Crunch (TechToons Ltd.) - 1996
-1. Urban Runner (Coktel Vision) - 1996
-1. The Dame Was Loaded (Beam Software) - 1996
-1. Discworld II: Missing Presumed...!? (Perfect Entertainment) - 1996
-1. Dragon Lore II: The Heart of the Dragon Man (Cryo Interactive) - 1996
-1. Fable (Simbiosis Interactive) - 1996
-1. The Gene Machine (Divide By Zero) - 1996
-1. Kingdom II: Shadoan (Virtual Image Productions) - 1996
-1. Monty Python & the Quest for the Holy Grail (7th Level) - 1996
-1. Mutation of J.B. (Invention) - 1996
-1. Orion Burger (Sanctuary Woods) - 1996
-1. UFOs (Artech) - 1996
-1. Angel Devoid: Face of the Enemy[6] (Electric Dreams) - 1996
-1. Chronicles of the Sword (Synthetic Dimensions) - 1996
-1. Bad Mojo (Pulse Entertainment) - 1996
-1. Ripper (Take-Two Interactive) - 1996
-1. Spycraft: The Great Game (Activision) - 1996
-1. Zork Nemesis (Zombie LLC) - 1996
-1. Normality (Gremlin Interactive) - 1996
-1. Kingdom O' Magic (SCi) - 1996
-1. The Pandora Directive (Access Software) - 1996
-1. Azrael's Tear (Intelligent Games) - 1996
-1. Harvester (DigiFX Interactive) - 1996
-1. The Lost Files of Sherlock Holmes: The Case of the Rose Tattoo (Mythos Software, Inc.) - 1996
-1. Broken Sword: The Shadow of the Templars (Revolution Software) - 1996
-1. Timelapse (GTE Interactive Media) - 1996
-1. Lighthouse: The Dark Being (Sierra On-Line) - 1996
-1. Ace Ventura (7th Level) - 1996
-1. Blazing Dragons (The Illusions Gaming Company) - 1996
-1. Drowned God: Conspiracy of the Ages (Epic Multimedia Group) - 1996
-1. Martian Chronicles, The (Byron Preiss Multimedia Company) - 1995
-1. The Neverhood (The Neverhood, Inc.) - 1996
-1. The Pink Panther: Passport to Peril (Wanderlust Interactive) - 1996
-1. Toonstruck (Burst Studios) - 1996
-1. Rama (Dynamix) - 1996
-1. Titanic: Adventure Out of Time (Cyberflix) - 1996
-1. Leisure Suit Larry: Love for Sail! (Sierra On-Line) - 1996
-1. Phantasmagoria: A Puzzle of Flesh (Sierra On-Line) - 1996
-1. YU-NO: A girl who chants love at the bound of this world (ELF) - 1996
-1. Ark of Time (Trecision) - 1997
-1. The City of Lost Children (Psygnosis) - 1997
-1. Crusader: Adventure Out of Time (Index+) - 1997
-1. Egypt 1156 B.C. (Cryo Interactive Entertainment) - 1997
-1. Jack Orlando (TopWare Interactive) - 1997
-1. Riana Rouge (Black Dragon Productions) - 1997
-1. Sentient (Psygnosis) - 1997
-1. The Simpsons: Virtual Springfield (Digital Evolution) - 1997
-1. Versailles 1685 (Cryo Interactive) - 1997
-1. Voodoo Kid (Infogrames, Eric Sterling Collins, Hubert Chardot) - 1997
-1. WuKung: A Legendary Adventure (Abudoe Software) - 1997
-1. Realms of the Haunting (Gremlin Interactive) - 1997
-1. Obsidian (Rocket Science Games) - 1997
-1. Atlantis: The Lost Tales (Cryo Interactive) - 1997
-1. The Last Express (Smoking Car Productions) - 1997
-1. Shivers II: Harvest of Souls (Sierra On-Line) - 1997
-1. Callahan's Crosstime Saloon (Legend Entertainment) - 1997
-1. Safecracker (Daydream Software) - 1997
-1. Duckman: The Graphic Adventures of a Private Dick (The Illusions Gaming Company) - 1997
-1. The Feeble Files (Adventure Soft) - 1997
-1. The Journeyman Project: Pegasus Prime (Presto Studios) - 1997
-1. The Space Bar (Boffo Games) - 1997
-1. Spy Fox in "Dry Cereal" (Humongous Entertainment) - 1997
-1. Temüjin: A Supernatural Adventure (SouthPeak Games) - 1997
-1. Broken Sword II: The Smoking Mirror (Revolution Software) - 1997
-1. The Pink Panther: Hokus Pokus Pink (Wanderlust Interactive) - 1997
-1. Dark Earth (Kalisto Entertainment) - 1997
-1. Armed & Delirious (Makh-Shevet) - 1997
-1. Riven (Cyan) - 1997
-1. The Curse of Monkey Island (LucasArts) - 1997
-1. Zork: Grand Inquisitor (Activision) - 1997
-1. Blade Runner (Westwood Studios) - 1997
-1. Hollywood Monsters (Pendulo Studios) - 1997
-1. Ankh: The Tales of Mystery (Artex Software) - 1998
-1. Morpheus (Soap Bubble Productions) - 1998
-1. Nightlong: Union City Conspiracy (Team17, Trecision) - 1998
-1. ZeroZone[7] (R&P Electronic Media) - 1998
-1. The Journeyman Project 3: Legacy of Time (Presto Studios) - 1998
-1. Black Dahlia (Take-Two Interactive) - 1998
-1. Tex Murphy: Overseer (Access Software) - 1998
-1. Starship Titanic (The Digital Village) - 1998
-1. Sanitarium (DreamForge Intertainment) - 1998
-1. The X-Files Game (HyperBole Studios) - 1998
-1. Hopkins FBI (MP Entertainment) - 1998
-1. Ring: The Legend of the Nibelungen (Arxel Tribe) - 1998
-1. Grim Fandango (LucasArts) - 1998
-1. Nancy Drew: Secrets Can Kill (Her Interactive) - 1998
-1. John Saul's Blackstone Chronicles: An Adventure in Terror (Legend Entertainment) - 1998
-1. Juggernaut (Tonkin House) - 1998
-1. King's Quest: Mask of Eternity (Sierra Studios) - 1998
-1. Dark Side of the Moon: A Sci-Fi Adventure (SouthPeak Games) - 1998
-1. Quest for Glory V: Dragon Fire (Sierra On-Line) - 1998
-1. Discworld Noir (Perfect Entertainment, Teeny Weeny Games (PS)) - 1999
-1. The Forgotten: It Begins (Ransom Interactive) - 1999
-1. Paris 1313 (Dramæra) - 1999
-1. Physicus (HEUREKA-Klett Softwareverlag) - 1999
-1. Scooby-Doo: Mystery of the Fun Park Phantom (Engineering Animation, Inc.) - 1999
-1. Tony Tough and the Night of Roasted Moths (Nayma Software, Prograph Research S.r.l.) - 1999
-1. Zero Critical (Istvan Pely Productions) - 1999
-1. Biosys (JumpStart Solutions Ltd.) - 1999
-1. Beavis and Butt-Head Do U. (The Illusions Gaming Company) - 1999
-1. Amerzone (Microïds) - 1999
-1. Aztec: The Curse in the Heart of the City of Gold (Cryo Interactive) - 1999
-1. Traitors Gate (Daydream Software) - 1999
-1. Dracula: Resurrection (Index+, Canal+ Multimedia and France Telecom Multimedia) - 1999
-1. Faust (Arxel Tribe) - 1999
-1. The Silver Case (Grasshopper Manufacture) - 1999
-1. Spy Fox 2: "Some Assembly Required" (Humongous Entertainment) - 1999
-1. Omikron: The Nomad Soul (Quantic Dream) - 1999
-1. Atlantis II (Cryo Interactive) - 1999
-1. Freddi Fish 4: The Case of the Hogfish Rustlers of Briny Gulch (Humongous Entertainment) - 1999
-1. Nancy Drew: Stay Tuned for Danger (Her Interactive) - 1999
-1. The Longest Journey (Funcom) - 1999
-1. Gabriel Knight 3: Blood of the Sacred, Blood of the Damned (Sierra On-Line) - 1999
-1. Star Trek: Hidden Evil (Presto Studios) - 1999
-1. The Crystal Key (Earthlight Productions) - 1999
+2. [Space Quest: The Sarien Encounter (Sierra On-Line)]({% post_url 2021-08-09-space-quest-the-sarien-encounter %}) - 1986
+3. King's Quest III: To Heir Is Human (Sierra On-Line) - 1986
+4. ~~Suishō no Dragon (Square) - 1986~~ (_Japanese only_)
+5. ~~La Abadía del Crimen (The Abbey of Crime) (Opera Soft) - 1987~~ (_Spanish only_)
+6. Mortville Manor (Lankhor) - 1987
+7. Police Quest: In Pursuit of the Death Angel (Sierra On-Line) - 1987
+8. Leisure Suit Larry in the Land of the Lounge Lizards (Sierra On-Line) - 1987
+9. Shadowgate (ICOM Simulations) - 1987
+10. The Faery Tale Adventure (MicroIllusions) - 1987
+11. Méwilo (Coktel Vision) - 1987
+12. Maniac Mansion (Lucasfilm Games) - 1987
+13. Space Quest II: Vohaul's Revenge (Sierra On-Line) - 1987
+14. Déjà Vu II: Lost in Las Vegas (ICOM Simulations) - 1988
+15. Gold Rush! (Sierra On-Line) - 1988
+16. Manhunter: New York (Evryware) - 1988
+17. Neuromancer (Interplay Productions) - 1988
+18. King's Quest IV: The Perils of Rosella (Sierra On-Line) - 1988
+19. Leisure Suit Larry Goes Looking for Love (in Several Wrong Places) (Sierra On-Line) - 1988
+20. Zak McKracken and the Alien Mindbenders (Lucasfilm Games) - 1988
+21. Police Quest II: The Vengeance (Sierra On-Line) - 1988
+22. Snatcher (Konami) - 1988
+23. B.A.T. (Computer's Dream) - 1989
+24. Emmanuelle (Coktel Vision) - 1989
+25. Legend of Djel (Coktel Vision) - 1989
+26. Future Wars (Delphine Software International) - 1989
+27. KULT: The Temple of Flying Saucers (Exxos, ERE informatique) - 1989
+28. Manhunter 2: San Francisco (Evryware) - 1989
+29. Mean Streets (Access Software) - 1989
+30. Transylvania III: Vanquish the Night (Polarware) - 1989
+31. Space Quest III: The Pirates of Pestulon (Sierra On-Line) - 1989
+32. Indiana Jones and the Last Crusade (Lucasfilm Games) - 1989
+33. Quest for Glory: So You Want to Be a Hero (Sierra On-Line) - 1989
+34. The Colonel's Bequest (Sierra On-Line) - 1989
+35. Codename: ICEMAN (Sierra On-Line) - 1989
+36. Leisure Suit Larry III: Passionate Patti in Pursuit of the Pulsating Pectorals (Sierra On-Line) - 1989
+37. Altered Destiny (Accolade) - 1990
+38. Countdown (Access Software) - 1990
+39. Earthrise: A Guild Investigation (Matt Gruson) - 1990
+40. Geisha (Coktel Vision) - 1990
+41. Hugo's House of Horrors (Gray Design Associates) - 1990
+42. Les Manley in: Search for the King (Accolade) - 1990
+43. Maupiti Island (Lankhor) - 1990
+44. Operation Stealth (Delphine Software International) - 1990
+45. Quest for Glory II: Trial by Fire (Sierra On-Line) - 1990
+46. Rise of the Dragon (Dynamix) - 1990
+47. Conquests of Camelot: The Search for the Grail (Sierra On-Line) - 1990
+48. Loom (Lucasfilm Games) - 1990
+49. Spellcasting 101: Sorcerers Get All The Girls (Legend Entertainment) - 1990
+50. The Secret of Monkey Island (Lucasfilm Games) - 1990
+51. King's Quest V: Absence Makes the Heart Go Yonder! (Sierra On-Line) - 1990
+52. The Adventures of Willy Beamish (Dynamix) - 1991
+53. Conquests of the Longbow: The Legend of Robin Hood (Sierra On-Line) - 1991
+54. Cruise for a Corpse (Delphine Software International) - 1991
+55. Fascination (Coktel Vision) - 1991
+56. EcoQuest: The Search for Cetus (Sierra On-Line) - 1991
+57. Elvira II: The Jaws of Cerberus (Horrorsoft) - 1991
+58. Gobliiins (Coktel Vision) - 1991
+59. Heart of China (Dynamix) - 1991
+60. Hugo II, Whodunit? (Gray Design Associates) - 1991
+61. Les Manley in: Lost in L.A. (Accolade) - 1991
+62. Martian Memorandum (Access Software) - 1991
+63. Police Quest III: The Kindred (Sierra On-Line) - 1991
+64. Sherlock Holmes: Consulting Detective (ICOM Simulations) - 1991
+65. Spellcasting 201: The Sorcerer's Appliance (Legend Entertainment) - 1991
+66. Timequest (Legend Entertainment) - 1991
+67. Space Quest IV: Roger Wilco and the Time Rippers (Sierra On-Line) - 1991
+68. Metal Slader Glory (HAL Laboratory) - 1991
+69. Leisure Suit Larry 5: Passionate Patti Does a Little Undercover Work (Sierra On-Line) - 1991
+70. Monkey Island 2: LeChuck's Revenge (LucasArts) - 1991
+71. Amazon: Guardians of Eden (Access Software) - 1992
+72. B.A.T. II – The Koshan Conspiracy (Computer's Dream) - 1992
+73. Bargon Attack (Coktel Vision) - 1992
+74. The Dagger of Amon Ra (Sierra On-Line) - 1992
+75. Dark Seed (Cyberdreams) - 1992
+76. Daughter of Serpents (The Scroll) (Eldritch Games) - 1992
+77. Dune (Cryo Interactive) - 1992
+78. Eternam (Infogrames) - 1992
+79. Gobliins 2: The Prince Buffoon (Coktel Vision) - 1992
+80. Hook (Ocean) - 1992
+81. Hugo III, Jungle of Doom! (Gray Design Associates) - 1992
+82. Inca (Coktel Vision) - 1992
+83. Inspector Gadget: Mission 1 - Global Terror! (Azeroth, Inc.) - 1992
+84. KGB (Cryo Interactive) - 1992
+85. Leather Goddesses of Phobos 2: Gas Pump Girls Meet the Pulsating Inconvenience from Planet X! (Infocom) - 1992
+86. The Legacy: Realm of Terror (Magnetic Scrolls) - 1992
+87. Linus Spacehead's Cosmic Crusade/Cosmic Spacehead (Codemasters (NES version), Supersonic Software) - 1992
+88. The Lost Files of Sherlock Holmes: The Case of the Serrated Scalpel (Mythos Software, Inc.) - 1992
+89. The Palace of Deceit: The Dragon's Plight (Game Syndicate Productions (Cliff Bleszinski)) - 1992
+90. Plan 9 from Outer Space (Gremlin Ireland) - 1992
+91. Putt-Putt Joins the Parade (Humongous Entertainment) - 1992
+92. Sherlock Holmes: Consulting Detective Vol. II (ICOM Simulations) - 1992
+93. Ringworld: Revenge of the Patriarch (Tsunami Games) - 1992
+94. Spellcasting 301: Spring Break (Legend Entertainment) - 1992
+95. Star Trek: 25th Anniversary (Interplay) - 1992
+96. Nightshade (1992 video game) (Beam Software) - 1992
+97. Frederik Pohl's Gateway (Legend Entertainment) - 1992
+98. Indiana Jones and the Fate of Atlantis (LucasArts) - 1992
+99. Lure of the Temptress (Revolution Software) - 1992
+100. Quest for Glory III: Wages of War (Sierra On-Line) - 1992
+101. The Legend of Kyrandia: Fables and Fiends (Westwood Studios) - 1992
+102. King's Quest VI: Heir Today, Gone Tomorrow (Sierra On-Line) - 1992
+103. Curse of Enchantia (Core Design) - 1992
+104. Rex Nebular and the Cosmic Gender Bender (MicroProse) - 1992
+105. The Adventures of Melvin Freebush (Sherwood Forest Games) - 1993
+106. Blue Force (Tsunami Games) - 1993
+107. Dare to Dream (Epic MegaGames) - 1993
+108. Dracula Unleashed (ICOM Simulations) - 1993
+109. EcoQuest 2: Lost Secret of the Rainforest (Sierra On-Line) - 1993
+110. Eric the Unready (Legend Entertainment) - 1993
+111. Fatty Bear's Birthday Surprise (Humongous Entertainment) - 1993
+112. Freddy Pharkas: Frontier Pharmacist (Sierra On-Line) - 1993
+113. Gobliins Quest 3 (Coktel Vision) - 1993
+114. Inca II: Nations of Immortality (Coktel Vision) - 1993
+115. Innocent Until Caught (Divide By Zero) - 1993
+116. The Legend of Kyrandia: Hand of Fate (Westwood Studios) - 1993
+117. Lost in Time (Coktel Vision) - 1993
+118. Pepper's Adventures in Time (Sierra On-Line) - 1993
+119. Putt-Putt Goes to the Moon (Humongous Entertainment) - 1993
+120. Return of the Phantom (MicroProse) - 1993
+121. Sherlock Holmes: Consulting Detective Vol. III (ICOM Simulations) - 1993
+122. The Journeyman Project (Presto Studios) - 1993
+123. Space Quest V: Roger Wilco – The Next Mutation (Dynamix) - 1993
+124. Tajemnica Statuetki (Metropolis Software House) - 1993
+125. Veil of Darkness (Event Horizon Software) - 1993
+126. Shadow of the Comet (Infogrames) - 1993
+127. The 7th Guest (Trilobyte) - 1993
+128. Leisure Suit Larry 6: Shape Up or Slip Out! (Sierra On-Line) - 1993
+129. Maniac Mansion: Day of the Tentacle (LucasArts) - 1993
+130. Return to Zork (Infocom) - 1993
+131. Myst (Cyan) - 1993
+132. Simon the Sorcerer (Adventure Soft) - 1993
+133. Companions of Xanth (Legend Entertainment) - 1993
+134. Police Quest: Open Season (Sierra On-Line) - 1993
+135. Sam & Max Hit the Road (LucasArts) - 1993
+136. Star Trek: Judgment Rites (Interplay) - 1993
+137. Gateway II: Homeworld (Legend Entertainment) - 1993
+138. Jack in the Dark (Infogrames) - 1993
+139. Quest for Glory: Shadows of Darkness (Sierra On-Line) - 1993
+140. Gabriel Knight: Sins of the Fathers (Sierra On-Line) - 1993
+141. Jurassic Park (Sega of America) - 1993
+142. Alice: An Interactive Museum (Toshiba-EMI) - 1994
+143. Are You Afraid of the Dark: The Tale of Orpheo's Curse (Viacom New Media) - 1994
+144. The Bizarre Adventures of Woodruff and the Schnibble (Coktel Vision) - 1994
+145. BloodNet (MicroProse) - 1994
+146. Commander Blood (Cryo Interactive) - 1994
+147. Return to Ringworld (Tsunami Games) - 1994
+148. Dreamweb (Creative Reality) - 1994
+149. Gadget: Invention, Travel, & Adventure (Synergy, Inc.) - 1994
+150. Hell: A Cyberpunk Thriller (Take-Two Interactive Software) - 1994
+151. Igor: Objective Uikokahonia (Pendulo Studios) - 1994
+152. Inherit the Earth: Quest for the Orb (The Dreamers Guild) - 1994
+153. The Journeyman Project Turbo (Presto Studios) - 1994
+154. The Legend of Kyrandia: Malcolm's Revenge (Westwood Studios) - 1994
+155. Noctropolis (Flashpoint Productions) - 1994
+156. Plague of the Moon (Rebelsoft) - 1994
+157. Superhero League of Hoboken (Legend Entertainment) - 1994
+158. Under a Killing Moon (Access Software) - 1994
+159. Universe (Core Design) - 1994
+160. Dragonsphere (MicroProse) - 1994
+161. Beneath a Steel Sky (Revolution Software) - 1994
+162. Policenauts (Konami) - 1994
+163. Death Gate (Legend Entertainment) - 1994
+164. King's Quest VII: The Princeless Bride (Sierra On-Line) - 1994
+165. Dragon Lore: The Legend Begins (Cryo Interactive) - 1994
+166. The Beast Within: A Gabriel Knight Mystery (Sierra On-Line) - 1995
+167. The Big Red Adventure (Dynabyte) - 1995
+168. Chewy: Esc from F5 (Blue Byte) - 1995
+169. Chop Suey (game) (Theresa Duncan) - 1995
+170. Cosmology of Kyoto (Softedge) - 1995
+171. The Daedalus Encounter (Mechadeus) - 1995
+172. The Dark Eye (Inscape) - 1995
+173. Discworld (Teeny Weeny Games/Perfect 10 Productions) - 1995
+174. Dust: A Tale of the Wired West (Cyberflix) - 1995
+175. EVE Burst Error (C's Ware) - 1995
+176. Flight of the Amazon Queen (Interactive Binary Illusions) - 1995
+177. Frankenstein: Through the Eyes of the Monster (Amazing Media) - 1995
+178. Guilty (Divide By Zero) - 1995
+179. Heaven's Dawn[4] (Art 9 Entertainment Inc.) - 1995
+180. In the 1st Degree (Adair & Armstrong) - 1995
+181. Jewels of the Oracle (Dreamcatcher Interactive) - 1995
+182. The Journeyman Project 2: Buried in Time (Presto Studios) - 1995
+183. Karma Curse of the 12 Caves (Dreamcatcher Interactive) - 1995
+184. Kingdom: The Far Reaches (Virtual Image Productions) - 1995
+185. The Orion Conspiracy (Divide By Zero) - 1995
+186. Panic in the Park (Imagination Pilots) - 1995
+187. Prisoner of Ice (Infogrames) - 1995
+188. Qin: Tomb of the Middle Kingdom (Learning Technologies Interactive) - 1995
+189. SilverLoad (Millennium Interactive) - 1995
+190. Skyborg: Into the Vortex (SkyBox International) - 1995
+191. Teen Agent (Metropolis Software House) - 1995
+192. Touché: The Adventures of the Fifth Musketeer (Clipper Software) - 1995
+193. Wolfsbane (Midnight Games) - 1995
+194. Lost Eden (Cryo Interactive) - 1995
+195. Nocturnal Illusion (Apricot) - 1995
+196. Full Throttle (LucasArts) - 1995
+197. Aliens: A Comic Book Adventure (Cryo Interactive) - 1995
+198. Star Trek: The Next Generation – A Final Unity (Spectrum HoloByte) - 1995
+199. Space Quest 6: The Spinal Frontier (Sierra On-Line) - 1995
+200. Roberta Williams' Phantasmagoria (Sierra On-Line) - 1995
+201. Beavis and Butt-Head in Virtual Stupidity (Viacom New Media) - 1995
+202. Scooby-Doo Mystery (The Illusions Gaming Company) - 1995
+203. Clock Tower (Human Entertainment) - 1995
+204. Ripley's Believe It or Not!: The Riddle of Master Lu (Sanctuary Woods) - 1995
+205. I Have No Mouth, and I Must Scream (The Dreamers Guild) - 1995
+206. Torin's Passage (Sierra On-Line) - 1995
+207. Mission Critical (Legend Entertainment) - 1995
+208. Shivers (Sierra On-Line) - 1995
+209. Simon the Sorcerer II: The Lion, the Wizard and the Wardrobe (Adventure Soft) - 1995
+210. Total Distortion (Pop Rocket) - 1995
+211. Dark Seed II (Destiny Media Technologies) - 1995
+212. The Dig (LucasArts) - 1995
+213. The 11th Hour (Trilobyte) - 1995
+214. Shannara (Legend Entertainment) - 1995
+215. Chronomaster (DreamForge Intertainment) - 1995
+216. Robot City (Brooklyn Multimedia) - 1995
+217. Alien Incident (Housemarque) - 1996
+218. Amber: Journeys Beyond (Hue Forest Entertainment) - 1996
+219. Blue Ice (Art of Mind Productions) - 1996
+220. Creature Crunch (TechToons Ltd.) - 1996
+221. Urban Runner (Coktel Vision) - 1996
+222. The Dame Was Loaded (Beam Software) - 1996
+223. Discworld II: Missing Presumed...!? (Perfect Entertainment) - 1996
+224. Dragon Lore II: The Heart of the Dragon Man (Cryo Interactive) - 1996
+225. Fable (Simbiosis Interactive) - 1996
+226. The Gene Machine (Divide By Zero) - 1996
+227. Kingdom II: Shadoan (Virtual Image Productions) - 1996
+228. Monty Python & the Quest for the Holy Grail (7th Level) - 1996
+229. Mutation of J.B. (Invention) - 1996
+230. Orion Burger (Sanctuary Woods) - 1996
+231. UFOs (Artech) - 1996
+232. Angel Devoid: Face of the Enemy (Electric Dreams) - 1996
+233. Chronicles of the Sword (Synthetic Dimensions) - 1996
+234. Bad Mojo (Pulse Entertainment) - 1996
+235. Ripper (Take-Two Interactive) - 1996
+236. Spycraft: The Great Game (Activision) - 1996
+237. Zork Nemesis (Zombie LLC) - 1996
+238. Normality (Gremlin Interactive) - 1996
+239. Kingdom O' Magic (SCi) - 1996
+240. The Pandora Directive (Access Software) - 1996
+241. Azrael's Tear (Intelligent Games) - 1996
+242. Harvester (DigiFX Interactive) - 1996
+243. The Lost Files of Sherlock Holmes: The Case of the Rose Tattoo (Mythos Software, Inc.) - 1996
+244. Broken Sword: The Shadow of the Templars (Revolution Software) - 1996
+245. Timelapse (GTE Interactive Media) - 1996
+246. Lighthouse: The Dark Being (Sierra On-Line) - 1996
+247. Ace Ventura (7th Level) - 1996
+248. Blazing Dragons (The Illusions Gaming Company) - 1996
+249. Drowned God: Conspiracy of the Ages (Epic Multimedia Group) - 1996
+250. Martian Chronicles, The (Byron Preiss Multimedia Company) - 1995
+251. The Neverhood (The Neverhood, Inc.) - 1996
+252. The Pink Panther: Passport to Peril (Wanderlust Interactive) - 1996
+253. Toonstruck (Burst Studios) - 1996
+254. Rama (Dynamix) - 1996
+255. Titanic: Adventure Out of Time (Cyberflix) - 1996
+256. Leisure Suit Larry: Love for Sail! (Sierra On-Line) - 1996
+257. Phantasmagoria: A Puzzle of Flesh (Sierra On-Line) - 1996
+258. YU-NO: A girl who chants love at the bound of this world (ELF) - 1996
+259. Ark of Time (Trecision) - 1997
+260. The City of Lost Children (Psygnosis) - 1997
+261. Crusader: Adventure Out of Time (Index+) - 1997
+262. Egypt 1156 B.C. (Cryo Interactive Entertainment) - 1997
+263. Jack Orlando (TopWare Interactive) - 1997
+264. Riana Rouge (Black Dragon Productions) - 1997
+265. Sentient (Psygnosis) - 1997
+266. The Simpsons: Virtual Springfield (Digital Evolution) - 1997
+267. Versailles 1685 (Cryo Interactive) - 1997
+268. Voodoo Kid (Infogrames, Eric Sterling Collins, Hubert Chardot) - 1997
+269. WuKung: A Legendary Adventure (Abudoe Software) - 1997
+270. Realms of the Haunting (Gremlin Interactive) - 1997
+271. Obsidian (Rocket Science Games) - 1997
+272. Atlantis: The Lost Tales (Cryo Interactive) - 1997
+273. The Last Express (Smoking Car Productions) - 1997
+274. Shivers II: Harvest of Souls (Sierra On-Line) - 1997
+275. Callahan's Crosstime Saloon (Legend Entertainment) - 1997
+276. Safecracker (Daydream Software) - 1997
+277. Duckman: The Graphic Adventures of a Private Dick (The Illusions Gaming Company) - 1997
+278. The Feeble Files (Adventure Soft) - 1997
+279. The Journeyman Project: Pegasus Prime (Presto Studios) - 1997
+280. The Space Bar (Boffo Games) - 1997
+281. Spy Fox in "Dry Cereal" (Humongous Entertainment) - 1997
+282. Temüjin: A Supernatural Adventure (SouthPeak Games) - 1997
+283. Broken Sword II: The Smoking Mirror (Revolution Software) - 1997
+284. The Pink Panther: Hokus Pokus Pink (Wanderlust Interactive) - 1997
+285. Dark Earth (Kalisto Entertainment) - 1997
+286. Armed & Delirious (Makh-Shevet) - 1997
+287. Riven (Cyan) - 1997
+288. The Curse of Monkey Island (LucasArts) - 1997
+289. Zork: Grand Inquisitor (Activision) - 1997
+290. Blade Runner (Westwood Studios) - 1997
+291. Hollywood Monsters (Pendulo Studios) - 1997
+292. Ankh: The Tales of Mystery (Artex Software) - 1998
+293. Morpheus (Soap Bubble Productions) - 1998
+294. Nightlong: Union City Conspiracy (Team17, Trecision) - 1998
+295. ZeroZone[7] (R&P Electronic Media) - 1998
+296. The Journeyman Project 3: Legacy of Time (Presto Studios) - 1998
+297. Black Dahlia (Take-Two Interactive) - 1998
+298. Tex Murphy: Overseer (Access Software) - 1998
+299. Starship Titanic (The Digital Village) - 1998
+300. Sanitarium (DreamForge Intertainment) - 1998
+301. The X-Files Game (HyperBole Studios) - 1998
+302. Hopkins FBI (MP Entertainment) - 1998
+303. Ring: The Legend of the Nibelungen (Arxel Tribe) - 1998
+304. Grim Fandango (LucasArts) - 1998
+305. Nancy Drew: Secrets Can Kill (Her Interactive) - 1998
+306. John Saul's Blackstone Chronicles: An Adventure in Terror (Legend Entertainment) - 1998
+307. Juggernaut (Tonkin House) - 1998
+308. King's Quest: Mask of Eternity (Sierra Studios) - 1998
+309. Dark Side of the Moon: A Sci-Fi Adventure (SouthPeak Games) - 1998
+310. Quest for Glory V: Dragon Fire (Sierra On-Line) - 1998
+311. Discworld Noir (Perfect Entertainment, Teeny Weeny Games (PS)) - 1999
+312. The Forgotten: It Begins (Ransom Interactive) - 1999
+313. Paris 1313 (Dramæra) - 1999
+314. Physicus (HEUREKA-Klett Softwareverlag) - 1999
+315. Scooby-Doo: Mystery of the Fun Park Phantom (Engineering Animation, Inc.) - 1999
+316. Tony Tough and the Night of Roasted Moths (Nayma Software, Prograph Research S.r.l.) - 1999
+317. Zero Critical (Istvan Pely Productions) - 1999
+318. Biosys (JumpStart Solutions Ltd.) - 1999
+319. Beavis and Butt-Head Do U. (The Illusions Gaming Company) - 1999
+320. Amerzone (Microïds) - 1999
+321. Aztec: The Curse in the Heart of the City of Gold (Cryo Interactive) - 1999
+322. Traitors Gate (Daydream Software) - 1999
+323. Dracula: Resurrection (Index+, Canal+ Multimedia and France Telecom Multimedia) - 1999
+324. Faust (Arxel Tribe) - 1999
+325. The Silver Case (Grasshopper Manufacture) - 1999
+326. Spy Fox 2: "Some Assembly Required" (Humongous Entertainment) - 1999
+327. Omikron: The Nomad Soul (Quantic Dream) - 1999
+328. Atlantis II (Cryo Interactive) - 1999
+329. Freddi Fish 4: The Case of the Hogfish Rustlers of Briny Gulch (Humongous Entertainment) - 1999
+330. Nancy Drew: Stay Tuned for Danger (Her Interactive) - 1999
+331. The Longest Journey (Funcom) - 1999
+332. Gabriel Knight 3: Blood of the Sacred, Blood of the Damned (Sierra On-Line) - 1999
+333. Star Trek: Hidden Evil (Presto Studios) - 1999
+334. The Crystal Key (Earthlight Productions) - 1999
