--- a/_posts/2021-07-28-adventure-games-1980-1999.markdown
+++ b/_posts/2021-07-28-adventure-games-1980-1999.markdown
@@ -66,7 +66,7 @@ As I work through the list I'll link the reviews below. You can also find the re
 1. Below the Root (Dale Disharoon) - 1984
 1. Dallas Quest (Datasoft) - 1984
 1. ~~Okhotsk ni Kiyu: Hokkaido Rensa Satsujin Jiken (Yuji Horii, Login Software) - 1984~~ (_Japanese only_)
-1. Princess Tomato in the Salad Kingdom (Hudson Soft) - 1984
+1. [Princess Tomato in the Salad Kingdom (Hudson Soft)]({% post_url 2021-08-15-princess-tomato-in-the-salad-kingdom %}) - 1984
 1. ~~Wingman (TamTam) - 1984~~ (_Japanese only_)
 1. [King's Quest: Quest for the Crown (Sierra On-Line)]({% post_url 2021-08-06-kings-quest %}) - 1984
 1. The Crimson Crown - Further Adventures in Transylvania (Penguin Software) - 1985
